--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -30,6 +30,19 @@
   &--white {
     background-color: $color-white;
     color: $color-grey-dark;
+
+    &::after {
+      background-color: $color-white;
+    }
+  }
+
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-white;
+    }
   }
 
   &::after {
