--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -11,4 +11,18 @@
       rgba($color-primary-dark, 0.8)),
     url(../img/nat-4.jpg);
   background-size: cover;
+  margin-top: -10rem;
+
+  transform: skewY(-7deg);
+
+  // Skew the direct children back 7deg
+  &>* {
+    transform: skewY(7deg);
+  }
+}
+
+.section-tours {
+  background-color: $color-grey-light-1;
+  padding: 25rem 0 15rem 0;
+  margin-top: -10rem;
 }
