--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -30,9 +30,7 @@ body {
     font-weight: 700;
     letter-spacing: 1.75rem;
 
-    animation-name: moveInRight;
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
+    animation: moveInRight 1s ease-out;
   }
 }
 
@@ -41,7 +39,11 @@ body {
   text-transform: uppercase;
   font-weight: 700;
   display: inline-block;
-  background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+  background-image: linear-gradient(
+    to right,
+    $color-primary-light,
+    $color-primary-dark
+  );
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
