--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -4,14 +4,18 @@
   padding: 2.5rem;
   text-align: center;
   border-radius: 3px;
-  // box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
   transition: transition 0.3s;
 
   &__icon {
     font-size: 6rem;
     margin-bottom: 0.5rem;
     display: inline-block;
-    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    background-image: linear-gradient(
+      to right,
+      $color-primary-light,
+      $color-primary-dark
+    );
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
