--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,8 +11,33 @@ html {
   // 10px / 16px = 62.5%
   // 1rem = 10px
   font-size: 62.5%;
+
+  // 1rem = 9px
+  @include respond(tab-land) {
+    font-size: 56.25%;
+  }
+
+  // 1rem = 8px
+  @include respond(tab-port) {
+    font-size: 50%;
+  }
+
+  // 1rem = 8px
+  // @include respond(phone) {
+  //   font-size: 50%;
+  // }
+
+  // 1rem = 12px
+  @include respond(big-desktop) {
+    font-size: 75%;
+  }
 }
 
 body {
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
