--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -21,7 +21,7 @@
     box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
 
     &::after {
-      transform: scale(1.4) scaleY(1.6);
+      transform: scaleX(1.4) scaleY(1.6);
       opacity: 0;
     }
   }
@@ -47,7 +47,7 @@
     color: $color-white;
 
     &::after {
-      background-color: $color-white;
+      background-color: $color-primary;
     }
   }
 
@@ -62,10 +62,6 @@
     left: 0;
     z-index: -1;
     transition: all 0.4s;
-  }
-
-  &--white::after {
-    background-color: $color-white;
   }
 
   &--animated {
