--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,9 +4,17 @@
   font-size: 1.4rem;
   color: $color-grey-light-1;
 
+  @include respond(tab-port) {
+    padding: 8rem 0;
+  }
+
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
+
+    @include respond(tab-port) {
+      margin-bottom: 6rem;
+    }
   }
 
   &__logo {
@@ -15,9 +23,14 @@
   }
 
   &__navigation {
-    border-top: 1px solid;
+    border-top: 1px solid $color-grey-dark;
     padding-top: 2rem;
     display: inline-block;
+
+    @include respond(tab-port) {
+      width: 100%;
+      text-align: center;
+    }
   }
 
   &__list {
@@ -36,9 +49,11 @@
     &:link,
     &:visited {
       color: $color-grey-light-1;
+      background-color: $color-grey-dark-3;
       text-decoration: none;
       text-transform: uppercase;
       display: inline-block;
+      transition: all 0.2s;
     }
 
     &:hover,
@@ -54,5 +69,10 @@
     padding-top: 2rem;
     width: 80%;
     float: right;
+
+    @include respond(tab-port) {
+      width: 100%;
+      float: none;
+    }
   }
 }
